# dspy-slim-ts

./: .gitignore  README.md  dspy-slim-ts_craftsmanship-refactor-phase-1.md  knip.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json
docs/: RLM_V2_IMPLEMENTATION_PLAN.md  RLM_V2_VISION.md
examples/: rlm_custom_effect.ts  rlm_quickstart.ts
src/: adapter.ts  callback.ts  callback_types.ts  caller_module_types.ts  chain_of_thought.ts  chat_message.ts  codec.ts  evaluate.ts  example.ts  exceptions.ts  field.ts  gepa.ts  gepa_trace.ts  gepa_types.ts  guards.ts  history.ts  history_entry.ts  index.ts  infer_prefix.ts  json_value.ts  lm.ts  lm_output.ts  module.ts  node_code_interpreter.ts  owned_value.ts  parallel.ts  parameter.ts  predict.ts  prediction.ts  react.ts  replay_lm.ts  rlm.ts  rlm_combinators.ts  rlm_effects.ts  rlm_evaluator.ts  rlm_memory.ts  rlm_planner.ts  rlm_planner_quality.ts  rlm_task_router.ts  rlm_trace_types.ts  (+8 more)
tests/: adapter.test.ts  ax_oracle.test.ts  callback.test.ts  chain_of_thought.test.ts  evaluate.test.ts  example.test.ts  gepa.test.ts  golden_replay.test.ts  infer_prefix.test.ts  lm.test.ts  longcot_bridge.test.ts  metric_match.ts  minimax_policy_benchmark.ts  module.test.ts  native_function_calling.test.ts  parallel.test.ts  predict.test.ts  prediction.test.ts  providers.test.ts  react.test.ts  rlm_automata.test.ts  rlm_combinators.test.ts  rlm_effects.test.ts  rlm_evaluator.test.ts  rlm_gepa.test.ts  tool.test.ts  (+9 more)
tools/longcot/: README.md  export_questions.py  pyproject.toml  score_responses.py
(+22 files in other folders)
